# fa_helloworld

./: README.md  TODO.md  function_app.py  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
